[package]
name = "rpmspec"
description = "An RPM spec file parser"
version = "0.4.0"
authors = ["Fyra Labs <contact@fyralabs.com>"]
readme = "README.md"
repository = "https://github.com/rpm-rs/rpmspec-rs"
keywords = ["rpmspec", "rpm", "packaging"]
categories = ["parser-implementations", "parsing"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
regex = "1.6.0"
lazy_static = "1.4.0"
glob = "0.3.0"
tracing = "0.1.37"
color-eyre = "0.6.2"
smartstring = "1.0.1"
rlua = "0.19.4"
base64 = "0.21.0"
rustyline = "10.1.0"
parking_lot = "0.12.1"
lazy_format = "2.0.0"
thiserror = "1.0.43"
url = "2.4.0"
num_cpus = "1.16.0"
chumsky = "0.9.2"
libc = "0.2.147"
