[package]
name = "rpmexpr"
description = "A parser for %[RPM expressions]"
version = "0.1.0"
authors = ["Fyra Labs <contact@fyralabs.com>", "madonuko <mado@fyralabs.com>"]
readme = "README.md"
repository = "https://github.com/rpm-rs/rpmspec-rs"
keywords = ["rpmspec", "rpm", "packaging"]
categories = ["parser-implementations", "parsing"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2"
color-eyre = "0.6.2"
parking_lot = "0.12.1"
rpmspec-common = { version = "0.1.0", path = "../rpmspec-common" }
smartstring = "1.0.1"
thiserror = "1.0.50"

