[package]
name = "rpmspec-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
smartstring = "1.0.1"
chumsky = "0.9.2"
tracing = "0.1.29"
color-eyre = "0.6.2"
parking_lot = "0.12.1"
mlua = { version = "0.9.8", features = ["luajit"] }

