[package]
name = "rpmspec-common"
description = "Helper structs and functions for the rpmspec/rpmexpr crate"
version = "0.1.0"
authors = ["Fyra Labs <contact@fyralabs.com>", "madonuko <mado@fyralabs.com>"]
readme = "README.md"
repository = "https://github.com/rpm-rs/rpmspec-rs"
keywords = ["rpmspec", "rpm", "packaging"]
categories = ["parser-implementations", "parsing"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
smartstring = "1.0.1"
chumsky = "0.9.2"
tracing = "0.1.29"
# color-eyre = "0.6.2"
parking_lot = "0.12.1"
mlua = { version = "0.9.8", features = ["luajit"] }
lazy_format = "2.0.0"
chrono = { version = "0.4.38", default-features = false }
